--- a/views/home.html
+++ b/views/home.html
@@ -1,4 +1,4 @@
-<div class="home-search jumbotron row">
+<!-- <div class="home-search jumbotron row">
 	<form class="search-form form-inline" role="form" action="/">
 		<div class="form-group">
 			<label class="sr-only" for="home-search">Search the knowledge base</label>
@@ -6,33 +6,33 @@
 			<button type="submit" class="btn btn-primary btn-lg">Search</button>
 		</div>
 	</form>
-</div>
-<div class="home-categories row">
+</div> -->
+<div class="home-categories row block-box">
 	{{#pages}}
 		{{#is_index}}
 			{{#files.length}}
-			<div class="col col-sm-4">
-				<div class="panel panel-default {{class}}">
+			<div class="col col-sm-4 block">
+				<!-- <div class="panel panel-default {{class}}"> -->
 					<h2 class="panel-heading">Main Articles</h2>
 					<ul class="list-group pages">
 						{{#files}}
 							<li class="list-group-item page"><a href="/{{slug}}">{{title}}</a></li>
 						{{/files}}
 					</ul>
-				</div>
+				<!-- </div> -->
 			</div>
 			{{/files.length}}
 		{{/is_index}}
 		{{^is_index}}
-		<div class="col col-sm-4">
-			<div class="panel panel-default {{class}}">
+		<div class="col col-sm-4 block">
+			<!-- <div class="panel panel-default {{class}}"> -->
 				<h2 class="panel-heading">{{title}}</h2>
 				<ul class="list-group pages">
 					{{#files}}
 						<li class="list-group-item page"><a href="/{{slug}}">{{title}}</a></li>
 					{{/files}}
 				</ul>
-			</div>
+			<!-- </div> -->
 		</div>
 		{{/is_index}}
 	{{/pages}}
