--- a/views/search.html
+++ b/views/search.html
@@ -1,7 +1,7 @@
-<div class="row">
+<div class="row row-box">
     <div class="col-sm-3">
-
-        <ul class="menu">
+        <div class="cover"></div>
+        <ul class="menu side">
         {{#pages}}
             {{#is_index}}
                 {{#files}}
@@ -22,10 +22,10 @@
         </ul>
 
     </div>
-    <div class="col-sm-9">
+    <div class="col-sm-9 content-box">
 
         <section class="content search">
-            <h3 class="title">Search results for: {{search}}</h3>
+            <h3 class="title">搜索结果：{{search}}</h3>
             {{#searchResults.length}}
                 {{#searchResults}}
                 <div class="page">
