--- a/views/layout.html
+++ b/views/layout.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/bower_components/highlightjs/styles/solarized_light.css">
 	<link rel="stylesheet" href="/styles/style.css">
+	<link rel="stylesheet" href="/styles/typo.css">
 	<link rel="stylesheet" media="screen and (min-device-width: 750px)" href="/styles/pc.css">
 	<link rel="stylesheet" media="screen and (max-device-width: 749px)" href="/styles/mobile.css">
 	<script src="/bower_components/jquery/dist/jquery.min.js"></script>
