--- a/views/search.html
+++ b/views/search.html
@@ -25,7 +25,7 @@
     <div class="col-sm-9 content-box">
 
         <section class="content search">
-            <h3 class="title">搜索结果：{{search}}</h3>
+            <h3 class="title">Results: {{search}}</h3>
             {{#searchResults.length}}
                 {{#searchResults}}
                 <div class="page">
