--- a/views/layout.html
+++ b/views/layout.html
@@ -29,7 +29,7 @@
 				<form class="search-form form-inline pull-right" role="form" action="/">
 					<div class="form-group">
 						<label class="sr-only" for="search"></label>
-						<input type="search" class="form-control" name="search" id="search" size="30" value="{{search}}" placeholder="搜索知识库" autocomplete="off">
+						<input type="search" class="form-control" name="search" id="search" size="30" value="{{search}}" placeholder="Search" autocomplete="off">
 						<button type="submit" class="btn btn-primary btn-lg">
 							<img src="/images/search.png" width="25" height="25">
 						</button>
